--- a/package.json
+++ b/package.json
@@ -76,6 +76,7 @@
     "@trpc/server": "^11.0.0-rc.553",
     "@types/validator": "^13.15.4",
     "ai": "^4.3.19",
+    "bullmq": "^5.63.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "^1.1.1",
@@ -99,6 +100,7 @@
     "react-hook-form": "^7.61.1",
     "react-resizable-panels": "^3.0.3",
     "recharts": "^2.15.4",
+    "redis": "^5.9.0",
     "sonner": "^2.0.6",
     "stripe": "^14.21.0",
     "superjson": "^2.2.1",
