--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "db:migrate": "drizzle-kit migrate",
     "db:studio": "drizzle-kit studio",
     "db:seed": "tsx src/lib/db/seed.ts",
+    "add-sample-data": "tsx scripts/add-sample-data.ts",
     "format": "prettier --write .",
     "format:check": "prettier --check .",
     "memory:check": "node scripts/check-memory.js",
