--- a/package.json
+++ b/package.json
@@ -32,6 +32,10 @@
     "db:migrate": "drizzle-kit migrate",
     "db:studio": "drizzle-kit studio",
     "db:seed": "tsx src/lib/db/seed.ts",
+    "seed:products": "tsx scripts/seed-products-raw.ts",
+    "seed:products:dry": "tsx scripts/seed-products.ts --dry-run",
+    "test:persistence": "tsx scripts/test-persistence-simple.ts",
+    "test:api": "tsx scripts/test-api-endpoints.ts",
     "add-sample-data": "tsx scripts/add-sample-data.ts",
     "format": "prettier --write .",
     "format:check": "prettier --check .",
